--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "hardhat test --network localhost"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^4.4.0",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.2.22",
@@ -50,8 +51,5 @@
     "typechain": "^5.2.0",
     "typescript": "^4.5.2",
     "web3": "^1.6.1"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.3.3"
   }
 }
