Made full mint a separate test
Added yarn test:full-mint to mint everything. The test will output a CSV. Not ideal in the sense that it's a test but it works for now. Will need to build something different.
Added 5 runs of distribution in docs for reference

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ethernal:login": "ethernal login",
     "ethernal:listen": "ethernal listen",
     "node:local": "hardhat node --network hardhat",
-    "test": "hardhat test --deploy-fixture --network localhost"
+    "test": "hardhat test --deploy-fixture --network localhost",
+    "test:full-mint": "hardhat test --deploy-fixture --network localhost ./test/test-mint.ts"
   },
   "repository": {
     "type": "git",
