--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "contracts",
-  "version": "1.0.0",
+  "version": "1.0.s0",
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "ethernal:login": "ethernal login",
+    "ethernal:listen": "ethernal listen",
+    "node:local": "hardhat node --network hardhat",
     "test": "hardhat test --deploy-fixture --network localhost"
   },
   "repository": {
@@ -42,9 +44,11 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.1.1",
     "ethereum-waffle": "^3.4.0",
+    "ethernal": "^0.8.1",
     "ethers": "^5.5.2",
     "hardhat": "^2.6.8",
     "hardhat-deploy": "^0.9.14",
+    "hardhat-ethernal": "^0.3.10",
     "hardhat-gas-reporter": "^1.0.4",
     "prettier": "^2.5.0",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
