--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "arrowParens": "always",
   "printWidth": 80,
-  "singleQuote": true,
+  "singleQuote": false,
   "trailingComma": "all",
   "useTabs": false
 }
