--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ethernal:listen": "ethernal listen",
     "deploy": "hardhat deploy",
     "node:local": "hardhat node --network hardhat",
-    "test": "hardhat test --deploy-fixture --network localhost test/test-genesis.ts",
+    "test": "hardhat test --logs --deploy-fixture --network localhost test/test-genesis.ts",
     "test:full-mint": "hardhat test --deploy-fixture --network localhost test/test-mint.ts"
   },
   "repository": {
@@ -55,6 +55,7 @@
     "hardhat-deploy": "^0.9.14",
     "hardhat-ethernal": "^0.3.10",
     "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-tracer": "^1.0.0-alpha.6",
     "prettier": "^2.5.0",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.6",
