--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "ethernal": "^0.8.1",
     "ethers": "^5.5.2",
     "hardhat": "^2.6.8",
+    "hardhat-contract-sizer": "^2.1.1",
     "hardhat-deploy": "^0.9.14",
     "hardhat-ethernal": "^0.3.10",
     "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-log-remover": "^2.0.2",
     "hardhat-tracer": "^1.0.0-alpha.6",
     "prettier": "^2.5.0",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
