--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ethernal": "^0.8.1",
     "ethers": "^5.5.2",
     "hardhat": "^2.6.8",
+    "hardhat-abi-exporter": "^2.4.1",
     "hardhat-contract-sizer": "^2.1.1",
     "hardhat-deploy": "^0.9.14",
     "hardhat-ethernal": "^0.3.10",
